# new-destiny

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_reader.sh  tester.py
src/new_destiny/: __init__.py  exceptions.py  json_types.py  rate_limit_exceptions.py  rate_limit_helpers.py  rate_limiter.py  riot_get_request.py  riot_get_request_with_retry.py  utilities.py
src/new_destiny/settings/: config.py
tests/: test_walkthrough.py
