[project]
name = "new-destiny"
version = "0.2.5"
description = "An easy to use, fully async, fast, scalable, interpretable rate limiting solution for the Riot Games API (currently for League of Legends only) built on Python, asyncio, and Redis."
authors = [
    {name = "Victor Haynes",email = "vichaynesdevelopment@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "anyio (==4.9.0)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.4.26)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "colorama (==0.4.6)",
    "dotenv (==0.9.9)",
    "dulwich (==0.22.8)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "keyring (==25.6.0)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.0)",
    "packaging (==25.0)",
    "platformdirs (==4.3.8)",
    "pycparser (==2.22)",
    "python-dotenv (==1.1.0)",
    "rapidfuzz (==3.13.0)",
    "redis (==6.1.0)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "urllib3 (==2.4.0)",
    "xattr (==1.1.4)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
crashtest = "^0.4.1"
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"

