[project]
name = "new-destiny"
version = "0.3.0"
description = "An easy to use, fully async, fast, scalable, interpretable rate limiting solution for the Riot Games API (currently for League of Legends only) built on Python, asyncio, and Redis."
authors = [
    {name = "Victor Haynes",email = "vichaynesdevelopment@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "httpx>=0.28.0,<0.29",
    "redis>=6.0.0,<7.0",
    "python-dotenv>=1.0.0,<2.0",
    "colorama>=0.4.6,<0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
crashtest = "^0.4.1"
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"

[project.urls]
Homepage = "https://pypi.org/project/new-destiny/"
Repository = "https://github.com/victorhaynes/new-destiny"
Issues = "https://github.com/victorhaynes/new-destiny/issues"

[tool.setuptools]
packages = ["new_destiny"]
package-dir = {"" = "src"}

[tool.setuptools.exclude-package-data]
"*" = [
    ".env",
    ".env.*",
    "*.pyc",
    "*.pyo",
    "*.log",
    "*_token.txt",
    "*_recovery.txt",
    "repackage.sh",
]